# gflog

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  dashboard.rs  live.rs  main.rs  offline.rs  record.rs  views.rs
