[package]
name = "gflog"
version = "0.9.0"
edition = "2024"
description = "Query Grafana dashboards and parse Grafana/Loki logs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MehmetSecgin/gflog"
keywords = ["grafana", "loki", "logs", "logql", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "gflog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
glob = "0.3"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls-native-roots",
] }

[profile.release]
strip = true
lto = true
